--- a/rest-api/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/rest-api/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,15 @@
 databaseChangeLog:
   - include:
       file: /db/changelog/changes/create-user-table.sql
+  - include:
+      file: /db/changelog/changes/create-role-table.sql
+  - include:
+      file: /db/changelog/changes/add-role-sequence.sql
+  - include:
+      file: /db/changelog/changes/add-user-sequence.sql
+  - include:
+      file: /db/changelog/changes/create-user-role-table.sql
+  - include:
+      file: /db/changelog/changes/add-basic-roles.sql
+  - include:
+      file: /db/changelog/changes/add-first-user-admin-row-to-user-table.sql
