[rest-api]: add GET /users, POST /users, POST /login, POST /refresh endpoints

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
+
+#JWT
+security.jwt.token.expire-length=3600000
+security.jwt.token.secret-key=secret
