[rest-api]: add PATCH /users/block endpoint

--- a/rest-api/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/rest-api/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: /db/changelog/changes/add-basic-roles.sql
   - include:
       file: /db/changelog/changes/add-first-user-admin-row-to-user-table.sql
+  - include:
+      file: /db/changelog/changes/add-blocked-column-to-user-table.sql
