[rest-api]: add GET /roles endpoint

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.open-in-view=false
 #JWT
 security.jwt.token.expire-length=3600000
 security.jwt.token.secret-key=secret
+
+# remote debug
+spring.devtools.remote.secret=itki
+spring.devtools.restart.poll-interval=2s
+spring.devtools.restart.quiet-period=1s
