--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - spring.datasource.password=$POSTGRES_PASSWORD
       - security.jwt.token.expire-length=$JWT_TOKEN_TTL
       - spring.jpa.hibernate.ddl-auto=validate
+      - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
     healthcheck:
       test: [ "CMD-SHELL", "curl -X GET localhost:8080/success" ]
       interval: 10s
