--- a/rest-api/build.gradle
+++ b/rest-api/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.liquibase:liquibase-core'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     compileOnly 'org.projectlombok:lombok'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
