--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ SPRING_LOCAL_PORT=8080
 SPRING_DOCKER_PORT=8080
 # 4 minutes
 JWT_TOKEN_TTL=240000
+# logs
+EVENTS_LOG=events.log
+LOGIN_LOG=login.log
