--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -18,3 +18,7 @@ security.jwt.token.secret-key=secret
 spring.devtools.remote.secret=itki
 spring.devtools.restart.poll-interval=2s
 spring.devtools.restart.quiet-period=1s
+
+# logs
+EVENTS_LOG=events.log
+LOGIN_LOG=login.log
