[pmzi-app]: add default six users with password ADMIN

--- a/rest-api/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/rest-api/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,5 @@ databaseChangeLog:
       file: /db/changelog/changes/add-question-sequence.sql
   - include:
       file: /db/changelog/changes/add-two-questions-for-first-admin.sql
+  - include:
+      file: /db/changelog/changes/add-six-users-to-user-table.sql
