[pmzi-app]: add POST /files endpoint

--- a/rest-api/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/rest-api/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -23,3 +23,5 @@ databaseChangeLog:
       file: /db/changelog/changes/add-two-questions-for-first-admin.sql
   - include:
       file: /db/changelog/changes/add-six-users-to-user-table.sql
+  - include:
+      file: /db/changelog/changes/add-demo-role.sql
