--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -25,3 +25,7 @@ LOGIN_LOG=login.log
 
 # Caesar cipher
 SHIFT=3
+
+# Multipart files properties
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=500MB
